Bindings/NIFToolset.Native/NIF.Native.RenderPipeline.h

NIFTOOLSET_NATIVE_ENTRY void NIF_AlphaAccumulator_Destroy(NIF_AlphaAccumulatorHandle accumulator);
NIFTOOLSET_NATIVE_ENTRY NIF_AlphaAccumulatorHandle NIF_AlphaAccumulator_Create(void);
NIFTOOLSET_NATIVE_ENTRY void NIF_AlphaAccumulator_SetObserveNoSortHint(NIF_AlphaAccumulatorHandle accumulator, int observe);
NIFTOOLSET_NATIVE_ENTRY int NIF_AlphaAccumulator_GetObserveNoSortHint(NIF_AlphaAccumulatorHandle accumulator);
NIFTOOLSET_NATIVE_ENTRY void NIF_AlphaAccumulator_SetSortByClosestPoint(NIF_AlphaAccumulatorHandle accumulator, int sortByClosestPoint);
NIFTOOLSET_NATIVE_ENTRY int NIF_AlphaAccumulator_GetSortByClosestPoint(NIF_AlphaAccumulatorHandle accumulator);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderListProcessor_Destroy(NIF_RenderListProcessorHandle processor);
NIFTOOLSET_NATIVE_ENTRY void NIF_AlphaSortProcessor_Destroy(NIF_AlphaSortProcessorHandle processor);
NIFTOOLSET_NATIVE_ENTRY NIF_AlphaSortProcessorHandle NIF_AlphaSortProcessor_Create(int observeNoSortHint, int sortByClosestPoint);
NIFTOOLSET_NATIVE_ENTRY int NIF_AlphaSortProcessor_AsRenderListProcessor(NIF_AlphaSortProcessorHandle processor, NIF_RenderListProcessorHandle* outProcessor);
NIFTOOLSET_NATIVE_ENTRY void NIF_AlphaSortProcessor_SetObserveNoSortHint(NIF_AlphaSortProcessorHandle processor, int observeNoSortHint);
NIFTOOLSET_NATIVE_ENTRY int NIF_AlphaSortProcessor_GetObserveNoSortHint(NIF_AlphaSortProcessorHandle processor);
NIFTOOLSET_NATIVE_ENTRY void NIF_CullingProcess_Destroy(NIF_CullingProcessHandle cullingProcess);
NIFTOOLSET_NATIVE_ENTRY void NIF_MeshCullingProcess_Destroy(NIF_MeshCullingProcessHandle cullingProcess);
NIFTOOLSET_NATIVE_ENTRY NIF_MeshCullingProcessHandle NIF_MeshCullingProcess_Create(void);
NIFTOOLSET_NATIVE_ENTRY int NIF_MeshCullingProcess_AsCullingProcess(NIF_MeshCullingProcessHandle cullingProcess, NIF_CullingProcessHandle* outCullingProcess);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView_Destroy(NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_RenderView_GetName(NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView_SetName(NIF_RenderViewHandle renderView, const char* name);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView_ClearCachedPVGeometry(NIF_RenderViewHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_Destroy(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY NIF_RenderView3DHandle NIF_RenderView3D_Create(NIF_CameraHandle camera, NIF_CullingProcessHandle cullingProcess, int alwaysUseCameraViewport);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderView3D_AsRenderView(NIF_RenderView3DHandle renderView, NIF_RenderViewHandle* outRenderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_SetCamera(NIF_RenderView3DHandle renderView, NIF_CameraHandle camera);
NIFTOOLSET_NATIVE_ENTRY NIF_CameraHandle NIF_RenderView3D_GetCamera(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_SetCullingProcess(NIF_RenderView3DHandle renderView, NIF_CullingProcessHandle cullingProcess);
NIFTOOLSET_NATIVE_ENTRY NIF_CullingProcessHandle NIF_RenderView3D_GetCullingProcess(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_SetAlwaysUseCameraViewport(NIF_RenderView3DHandle renderView, int alwaysUseCameraViewport);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderView3D_GetAlwaysUseCameraViewport(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_AppendScene(NIF_RenderView3DHandle renderView, NIF_AVObjectHandle scene);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_PrependScene(NIF_RenderView3DHandle renderView, NIF_AVObjectHandle scene);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_RemoveScene(NIF_RenderView3DHandle renderView, NIF_AVObjectHandle scene);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderView3D_RemoveAllScenes(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_RenderView3D_GetSceneCount(NIF_RenderView3DHandle renderView);
NIFTOOLSET_NATIVE_ENTRY NIF_AVObjectHandle NIF_RenderView3D_GetSceneAt(NIF_RenderView3DHandle renderView, unsigned int index);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_Destroy(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_RenderClick_GetName(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetName(NIF_RenderClickHandle renderClick, const char* name);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetClearAllBuffers(NIF_RenderClickHandle renderClick, int clearAllBuffers);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetClearColorBuffers(NIF_RenderClickHandle renderClick, int clearColorBuffers);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetClearColorBuffers(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetClearDepthBuffer(NIF_RenderClickHandle renderClick, int clearDepthBuffer);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetClearDepthBuffer(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetClearStencilBuffer(NIF_RenderClickHandle renderClick, int clearStencilBuffer);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetClearStencilBuffer(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_RequestClearAllBuffersOnce(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_RequestClearColorBuffersOnce(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_RequestClearDepthBufferOnce(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_RequestClearStencilBufferOnce(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetBackgroundColor(NIF_RenderClickHandle renderClick, NIF_ColorA color);
NIFTOOLSET_NATIVE_ENTRY NIF_ColorA NIF_RenderClick_GetBackgroundColor(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetUseRendererBackgroundColor(NIF_RenderClickHandle renderClick, int useRendererBackgroundColor);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetUseRendererBackgroundColor(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetPersistBackgroundColorToRenderer(NIF_RenderClickHandle renderClick, int persist);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetPersistBackgroundColorToRenderer(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetViewport(NIF_RenderClickHandle renderClick, NIF_Rect viewport);
NIFTOOLSET_NATIVE_ENTRY NIF_Rect NIF_RenderClick_GetViewport(NIF_RenderClickHandle renderClick);
NIFTOOLSET_NATIVE_ENTRY void NIF_RenderClick_SetActive(NIF_RenderClickHandle renderClick, int active);
NIFTOOLSET_NATIVE_ENTRY int NIF_RenderClick_GetActive(NIF_RenderClickHandle renderClick);