Bindings/NIFToolset.Managed/NativeMethods.cs


    #region NIF.Native.RenderPipeline.h
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_AlphaAccumulator_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAlphaAccumulatorHandle NIF_AlphaAccumulator_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_AlphaAccumulator_SetObserveNoSortHint(SafeAlphaAccumulatorHandle accumulator, int observe);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_AlphaAccumulator_GetObserveNoSortHint(SafeAlphaAccumulatorHandle accumulator);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_AlphaAccumulator_SetSortByClosestPoint(SafeAlphaAccumulatorHandle accumulator, int sortByClosestPoint);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_AlphaAccumulator_GetSortByClosestPoint(SafeAlphaAccumulatorHandle accumulator);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_RenderListProcessor_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_AlphaSortProcessor_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAlphaSortProcessorHandle NIF_AlphaSortProcessor_Create(int observeNoSortHint, int sortByClosestPoint);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_AlphaSortProcessor_AsRenderListProcessor(SafeAlphaSortProcessorHandle processor, out SafeRenderListProcessorHandle outProcessor);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_AlphaSortProcessor_SetObserveNoSortHint(SafeAlphaSortProcessorHandle processor, int observeNoSortHint);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_AlphaSortProcessor_GetObserveNoSortHint(SafeAlphaSortProcessorHandle processor);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_CullingProcess_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_MeshCullingProcess_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeMeshCullingProcessHandle NIF_MeshCullingProcess_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_MeshCullingProcess_AsCullingProcess(SafeMeshCullingProcessHandle cullingProcess, out SafeCullingProcessHandle outCullingProcess);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_RenderView_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_RenderView_GetName(SafeRenderViewHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView_SetName(SafeRenderViewHandle renderView, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView_ClearCachedPVGeometry(SafeRenderViewHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_RenderView3D_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeRenderView3DHandle NIF_RenderView3D_Create(SafeCameraHandle camera, SafeCullingProcessHandle cullingProcess, int alwaysUseCameraViewport);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderView3D_AsRenderView(SafeRenderView3DHandle renderView, out SafeRenderViewHandle outRenderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_SetCamera(SafeRenderView3DHandle renderView, SafeCameraHandle camera);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeCameraHandle NIF_RenderView3D_GetCamera(SafeRenderView3DHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_SetCullingProcess(SafeRenderView3DHandle renderView, SafeCullingProcessHandle cullingProcess);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeCullingProcessHandle NIF_RenderView3D_GetCullingProcess(SafeRenderView3DHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_SetAlwaysUseCameraViewport(SafeRenderView3DHandle renderView, int alwaysUseCameraViewport);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderView3D_GetAlwaysUseCameraViewport(SafeRenderView3DHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_AppendScene(SafeRenderView3DHandle renderView, SafeAVObjectHandle scene);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_PrependScene(SafeRenderView3DHandle renderView, SafeAVObjectHandle scene);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_RemoveScene(SafeRenderView3DHandle renderView, SafeAVObjectHandle scene);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderView3D_RemoveAllScenes(SafeRenderView3DHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_RenderView3D_GetSceneCount(SafeRenderView3DHandle renderView);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAVObjectHandle NIF_RenderView3D_GetSceneAt(SafeRenderView3DHandle renderView, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_RenderClick_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_RenderClick_GetName(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetName(SafeRenderClickHandle renderClick, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetClearAllBuffers(SafeRenderClickHandle renderClick, int clearAllBuffers);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetClearColorBuffers(SafeRenderClickHandle renderClick, int clearColorBuffers);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetClearColorBuffers(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetClearDepthBuffer(SafeRenderClickHandle renderClick, int clearDepthBuffer);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetClearDepthBuffer(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetClearStencilBuffer(SafeRenderClickHandle renderClick, int clearStencilBuffer);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetClearStencilBuffer(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_RequestClearAllBuffersOnce(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_RequestClearColorBuffersOnce(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_RequestClearDepthBufferOnce(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_RequestClearStencilBufferOnce(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetBackgroundColor(SafeRenderClickHandle renderClick, NifColorA color);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern NifColorA NIF_RenderClick_GetBackgroundColor(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetUseRendererBackgroundColor(SafeRenderClickHandle renderClick, int useRendererBackgroundColor);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetUseRendererBackgroundColor(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetPersistBackgroundColorToRenderer(SafeRenderClickHandle renderClick, int persist);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetPersistBackgroundColorToRenderer(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetViewport(SafeRenderClickHandle renderClick, NifRect viewport);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern NifRect NIF_RenderClick_GetViewport(SafeRenderClickHandle renderClick);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_RenderClick_SetActive(SafeRenderClickHandle renderClick, int active);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_RenderClick_GetActive(SafeRenderClickHandle renderClick);
